--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   line-height: 32px;
   color: #222222;
   background-color: #f2f4f6;
-  background-image: url("https://github.com/Black2rider/My-site/blob/master/hero-bg.jpg");
+  background-image: url("https://user-images.githubusercontent.com/60221585/72996138-d73a4b80-3e02-11ea-81d1-460107de7260.jpg");
   background-repeat: no-repeat;
   background-position: top center;
 }
